gobmkida/c3/is_suicide
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/is_suicide/src/engine/board.c:1590:24: error: use of undeclared identifier 'byte_9C689F'
v4 = ( unsigned __int8)byte_9C689F[pos]; 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/is_suicide/src/engine/board.c:1591:6: error: use of undeclared identifier 'byte_9C689F'
if ( byte_9C689F[pos] 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/is_suicide/src/engine/board.c:1594:24: error: use of undeclared identifier 'byte_9C688C'
v5 = ( unsigned __int8)byte_9C688C[pos]; 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/is_suicide/src/engine/board.c:1595:6: error: use of undeclared identifier 'byte_9C688C'
if ( byte_9C688C[pos] ) 
     ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/is_suicide/src/obj/1/board.o] Error 1
